tests/errors/syn_err01.kt
// missing assignment error
val a 10